@@ -1,3 +1,11 @@
+2002-04-24  Kaz Sasayama  <Kaz.Sasayama@Hypercore.co.jp>
+
+	* bin/profile.cc (class xmlNode_iterator): Add oprator!=.
+
+	* include/utils.h (class modal_dialog): Prefix std:: to vector.
+
+	* lib/module.cc: Add using namespace std.
+
 2000-07-19  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* bin/main.cc (create_window): Add "Help" to the menu bar.
